--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -6,4 +6,4 @@ COPY . $APP_PATH/
 RUN pip install --no-cache-dir -r $APP_PATH/requirements.txt
 
 WORKDIR $APP_PATH
-RUN python manage.py collectstatic --noinput
+RUN python3 manage.py collectstatic --noinput
