--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - '3031'
     depends_on:
       - postgres
-    command: python3 manage.py migrate && gunicorn my_docker_project.wsgi -b 0.0.0.0:3031
+    command: gunicorn my_docker_project.wsgi -b 0.0.0.0:3031
     volumes:
       - staticdata:/opt/static/
 
@@ -22,9 +22,9 @@ services:
     depends_on:
       - django
     ports:
-      - 80:80
+      - 8080:80
     volumes:
-      - ./nginx/:etc/nginx/
+      - ./nginx/:/etc/nginx/
       - staticdata:/opt/apps/static/
 
   postgres:
