--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,30 @@
+
+events {   
+}
+
 http {
+
     upstream django_server {
         server django:3031 fail_timeout=0;
     }
 
-    location /static/ {
-        alias /opt/apps/static/;
+    server{
+
+        location /static/ {
+            alias /opt/apps/static/;
+        }
+
+        location / {
+            try_files $uri @proxy_to_django;
+        }
+
+        location @proxy_to_django {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_set_header X_Real-IP $remote_addr;
+            proxy_redirect off;
+            proxy_pass http://django_server;
+        }
     }
 
-    location / {
-        try_files $uri @proxy_to_django;
-    }
-
-    location @proxy_to_django {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header X_Real-IP $remote_addr;
-        proxy_redirect off;
-        proxy_pass http://django_server;
-    }
-    
 }
